BUG:193028

svn path=/trunk/KDE/kdesdk/lokalize/; revision=972296